# scrape-byLLM

./: .gitignore  LICENSE  README.md  comparison.py  comparison_parameters.py  main.jac  main.py  pyproject.toml  requirements.txt  scraper.jac  test_fetch.jac  test_min.jac  test_tables.jac
lib/: __init__.jac  executor.jac  fetch.jac  planner.jac  scrape.jac  scraper.jac  selenium_abs.jac
ml/: __init__.jac  process.jac  selectors.jac
results/formatted/: 20260629-1-results.md  20260630-1-results.md  20260706-1-results.md  20260706-2-results.md
results/raw/: comparison_absent_data.json  comparison_computed_value.json  comparison_dispersed_extract_all.json  comparison_distractor_contamination.json  comparison_format_ambiguity.json  comparison_implicit_relational.json  comparison_merged_table_headers.json  comparison_population_density.json  comparison_price_disambiguation.json  comparison_visual_encoding.json
scrape_byLLM/: __init__.jac  __init__.py  executor.jac  fetch.jac  output.jac  planner.jac  presets.jac  robots.jac  scrape.jac  scraper.jac
scrape_byllm/: __init__.jac  executor.jac  fetch.jac  planner.jac  presets.jac  scraper.jac
scripts/: generate_results.py
