[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scrape-byLLM"
version = "0.1.0"
description = "LLM-planned, regex-executed web scraper. One LLM call compiles a reusable plan; every page after is pure regex."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "abebrege" }]
keywords = ["scraping", "llm", "jac", "byLLM", "regex"]

dependencies = [
    "jaclang>=0.16.7",
    "byllm>=0.6.17",
    "selenium>=4.27.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
# Ship both the Jac implementation and the Python facade.
packages = ["scrape_byLLM"]
include = ["scrape_byLLM/**/*.jac"]

[tool.hatch.build.targets.sdist]
include = [
    "scrape_byLLM/**/*.jac",
    "scrape_byllm/**/*.py",
    "main.jac",
    "jac.toml",
    "README.md",
    "LICENSE",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
